<resources>
    <string name="app_name">Pollgeo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="Login_Button_Text">Login</string>
    <string name="SignUpText">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email</string>
    <string name="signup_error_title">Oops</string>
    <string name="login_error_message">Please make sure you enter a username and password</string>
    <string name="login_error_title">Oops</string>
    <string name="menu_logout_label">Logout</string>
    <string name="title_activity_make_poll">Make your poll</string>
    <string name="Submit_Button_Text">Submit Poll</string>
    <string name="Poll_Title_Hint">Include your poll name here.</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="option1">Option 1</string>
    <string name="make_poll_error_msg">Please include a title and at least two options.</string>
    <string name="make_poll_error_title">Something went wrong..</string>
    <string name="create_poll_string">Make a new poll</string>
    <string name="no_data">\"No Data\"</string>
    <string name="title_activity_voter_view">VoterViewActivity</string>
    <string name="facebook_app_id">1648053042118899</string>
    <string-array name="sections_array">
    <item>Local</item>
    <item>My Profile</item>
    <item>Groups</item>
    <item>Settings</item>
    </string-array>
    <string name="profile_title_logged_in">Your are logged in as</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="profile_title_logged_out">You must be logged in to view your profile</string>
    <string name="profile_login_button_label">Log in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>
