<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ndejaco.pollgeo.MakePollActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Submit_Button_Text"
        android:id="@+id/submit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/poll_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/Poll_Title_Hint"
        android:hint="@string/Poll_Title_Hint"
        android:editable="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option1"
        android:layout_below="@+id/poll_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="true"
        android:hint="@string/option1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option2"
        android:layout_below="@+id/option1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="true"
        android:hint="@string/option2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option3"
        android:layout_below="@+id/option2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="true"
        android:hint="@string/option3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option4"
        android:layout_below="@+id/option3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="true"
        android:hint="@string/option4" />

</RelativeLayout>
